[package]
name = "plygui-win32"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]

[lib]
name = "plygui_win32"
path = "src/lib.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui-api"}
winapi = { version = "~0.3", features = ["windef", "minwindef", "winuser", "winbase", "commctrl", "errhandlingapi", "libloaderapi", "wingdi", "winerror"] }
lazy_static = "~0.2"
derive_builder = "~0.5"

[build-dependencies]
embed-resource = { version = "~1.1", optional = true }

[features]
markup = ["plygui-api/markup"]
prettier = ["winapi/dwmapi","winapi/uxtheme"]
manifest = ["embed-resource"]
default = ["manifest","prettier"]