[package]
name = "plygui-win32"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
edition = "2018"

[lib]
name = "plygui_win32"
path = "src/lib.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui/api"}
winapi = { version = "~0.3", features = ["windef", "minwindef", "winuser", "winbase", "commctrl", "winerror", "winnls", "stringapiset", "shellapi", "errhandlingapi", "libloaderapi", "wingdi", "synchapi", "uxtheme"] }
lazy_static = "~1.4"
derive_builder = "~0.9"

[build-dependencies]
embed-resource = { version = "~1.3", optional = true }

[features]
markup = ["plygui-api/markup"]
manifest = ["embed-resource"]
default = ["manifest"]